# view-from-nowhere

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  nowhere.yaml
docs/: documentation-gaps.md  index.html  styles.css  testing.md
docs/design/: deterministic_websearch.md  web_search_actor_build.md
migrations/: 01_init.sql
nowhere-actors/: Cargo.toml
nowhere-actors/src/: actor.rs  builder.rs  lib.rs  llm.rs  rate.rs  registry.rs  store.rs  supervise.rs  system.rs  twitter.rs
nowhere-app/: Cargo.toml
nowhere-app/src/: main.rs  tether.rs
nowhere-common/: Cargo.toml
nowhere-common/src/: lib.rs  observability.rs
nowhere-config/: Cargo.toml
nowhere-config/src/: lib.rs
nowhere-config/tests/: config_load.rs
nowhere-drivers/: Cargo.toml
nowhere-drivers/src/: lib.rs  mod.rs
nowhere-drivers/src/nowhere_browser/: behavioral.rs  driver.rs  fingerprint.rs  mod.rs  page.rs  stealth.rs
nowhere-http/: Cargo.toml
nowhere-http/src/: lib.rs
nowhere-llm/: Cargo.toml
nowhere-llm/src/: config.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  traits.rs  verifier.rs
nowhere-llm/tests/: common.rs  openai_integration.rs  verifier_e2e.rs
nowhere-runtime/: Cargo.toml
nowhere-runtime/src/: lib.rs
nowhere-social/: Cargo.toml
nowhere-social/src/: lib.rs
nowhere-social/src/twitter/: client.rs  extract.rs  mod.rs  types.rs
nowhere-tui/: Cargo.toml
nowhere-tui/src/: command.rs  feeders.rs  lib.rs  styles.rs  transcript.rs  tui.rs  view.rs
nowhere-web/: Cargo.toml
nowhere-web/src/: browser.rs  extract.rs  lib.rs
nowhere-web/src/brave/: client.rs  types.rs
