[package]
name = "nowhere-config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true } 
dirs = "6.0.0"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
config = "0.15.18"
serial_test = "3.2.0"
tempfile = "3.23.0"
shellexpand = "3.1.1"
temp-env = "0.3.6"
