[package]
name = "nowhere-social"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
url = { workspace = true }
nowhere-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = "0.3"
tokio = { workspace = true }
