[package]
name = "nowhere-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
unicode-width = "0.2.0"
textwrap = "0.16.1"

nowhere-actors = { workspace = true }
